<resources>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="app_name">GreetSweet</string>
    <string name="title_activity_home">GREET SWEET</string>
    <string name="googlemap_api_key">AIzaSyBbK0zRdKk7Y_m5dFlcwhfW6w3Ah38tCu4</string>
     <string name="facebook_app_id">401648853732138</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="ChoosefromLibrary">Choose From Library</string>
    <string name="CANCELButton">CANCEL</string>
    <string name="AddPhoto">ADD PHOTO</string>
    <string name="AddLogo">ADD Logo</string>
    <string name="SelectPicture">Select Picture</string>
    <string name="NEXT">NEXT</string>
    <string name="inputwebsite">Please submit the website name</string>
    <string name="inputfont">Please select font type</string>
    <string name="inputlang">Please select your language</string>
    <string name="upgrade_membership">Please upgrade your membership for using this feature.</string>
    <string name="not_authorize">You are not authorize for this feature.</string>
    <string name="authorize_enterprise_user">Feature for enterprise user only.</string>
    <string name="both_user">Feature for smart and enterprise user only.</string>
    <string name="apply">Apply</string>
    <string name="planname">Plan Name</string>
    <string name="totalAmount1">Total amount</string>
    <string name="makepayment">Make Payment</string>
    <string name="hey">Hey !</string>
    <string name="discloseplans"><![CDATA[Are You Sure You Want to discontinue your smart/enterprise plan & switch back to basic plans with limited features?]]></string>
    <string name="limitedfeature">limited features?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>