<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background"
    android:layout_marginLeft="@dimen/dimen_25dp"
    android:layout_marginTop="@dimen/dimen_6dp"
    android:layout_marginRight="@dimen/dimen_25dp"
   >
    <TextView
        android:id="@+id/heyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:gravity="center"
        android:text="@string/hey"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_25dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:gravity="center"
        android:text="@string/discloseplans"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heyText" />
    <TextView
        android:id="@+id/limited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:gravity="center"
        android:text="@string/limitedfeature"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView71" />

    <TextView
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_grey"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen_25dp"
        android:paddingTop="@dimen/dimen_6dp"
        android:paddingRight="@dimen/dimen_25dp"
        android:paddingBottom="@dimen/dimen_6dp"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView71" />

    <TextView
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_blue"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen_25dp"
        android:paddingTop="@dimen/dimen_6dp"
        android:paddingRight="@dimen/dimen_25dp"

        android:paddingBottom="@dimen/dimen_6dp"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/limited" />
</android.support.constraint.ConstraintLayout>