<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:tint="@color/gray"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/et_coupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:padding="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"></View>

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="140dp"

            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_buttonforapply"
            android:text="@string/apply"

            android:textColor="@color/white" />
        <TextView
            android:id="@+id/invalidCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/planname"
            android:textColor="@color/red"
            android:textSize="@dimen/dimen_16dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView94"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:layout_weight="0.5"
                android:text="@string/planname"
                android:textColor="@color/gray"


                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView106"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="TextView"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen_16dp"


                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/dimen_35dp"
            android:background="@color/gray"></View>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:layout_weight="0.5"
                android:text="@string/totalAmount1"
                android:textColor="@color/gray"


                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amounbt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="TextView"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen_16dp"


                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonmakePayment"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_buttonforapply"
        android:text="@string/makepayment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />



</android.support.constraint.ConstraintLayout>